feat: adição de entidade de historico para armazenar operações por paciente para melhoria de calculo
