# src/main/java/com/fiap/comparecimento/infrastructure/database/repositories/HistoricoRepository.java
@@ -1,0 +1,11 @@
+package com.fiap.comparecimento.infrastructure.database.repositories;
+
+import com.fiap.comparecimento.infrastructure.database.entities.HistoricoEntity;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+import java.util.List;
+
+public interface HistoricoRepository extends JpaRepository<HistoricoEntity, Long> {
+
+    List<HistoricoEntity> findByIdAgendamentoAndCns(Long idAgendamento, String cns);
+}
